invited speaker, color, Email

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -60,7 +60,7 @@ a {
   color: #fff;
   text-align: center;
   background-color: #159957;
-  background-image: linear-gradient(180deg, #06871e, #510587,#ffff33); }
+  background-image: linear-gradient(180deg, #D7A155, #410B0A,#410B0A); }
 
 @media screen and (min-width: 64em) {
   .page-header {
